@@ -6,6 +6,7 @@
 	a good idea.
 	(xst_network_suse70_interface_activate_by_dev): same.
 	(xst_network_suse70_ppp_iface_activate): same.
+	Print ifup/ifdown debug reports to STDERR to track problems.
 
 	* users-conf.in (xml_parse_users): Ignore files and shells
 	tags when parsing, instead of complaining.
